fixed z-index

--- a/src/components/FeaturedHead/FeaturedHead.styl
+++ b/src/components/FeaturedHead/FeaturedHead.styl
@@ -3,7 +3,7 @@
 .featured
   text-align center
   background-color white
-  z-index 9999
+  z-index 999
   position relative
   
   .featured-content
