--- a/src/components/WebHeader/WebHeader.styl
+++ b/src/components/WebHeader/WebHeader.styl
@@ -22,7 +22,7 @@
       position absolute
       top 0
       width 100%
-      z-index 999
+      z-index 99
 
   &.theme-gray
     background #f5f7f9
